feature(utils): add TS utils library

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,9 @@
     "my-angular-app-e2e": {
       "tags": [],
       "implicitDependencies": ["my-angular-app"]
+    },
+    "utils": {
+      "tags": []
     }
   }
 }
