--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "10.0.4",
     "@angular/animations": "^10.0.0",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
@@ -38,6 +37,7 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@nrwl/angular": "10.0.4",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
@@ -61,6 +61,7 @@
     "@types/jest": "25.1.4",
     "ts-jest": "25.2.1",
     "cypress": "^4.1.0",
-    "@nrwl/cypress": "10.0.4"
+    "@nrwl/cypress": "10.0.4",
+    "@nrwl/node": "10.0.4"
   }
 }
