feat(react): add the react app

--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,13 @@
     },
     "utils": {
       "tags": []
+    },
+    "my-react-app": {
+      "tags": []
+    },
+    "my-react-app-e2e": {
+      "tags": [],
+      "implicitDependencies": ["my-react-app"]
     }
   }
 }
