--- a/angular.json
+++ b/angular.json
@@ -149,6 +149,111 @@
           }
         }
       }
+    },
+    "my-react-app": {
+      "root": "apps/my-react-app",
+      "sourceRoot": "apps/my-react-app/src",
+      "projectType": "application",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/web:build",
+          "options": {
+            "outputPath": "dist/apps/my-react-app",
+            "index": "apps/my-react-app/src/index.html",
+            "main": "apps/my-react-app/src/main.tsx",
+            "polyfills": "apps/my-react-app/src/polyfills.ts",
+            "tsConfig": "apps/my-react-app/tsconfig.app.json",
+            "assets": [
+              "apps/my-react-app/src/favicon.ico",
+              "apps/my-react-app/src/assets"
+            ],
+            "styles": ["apps/my-react-app/src/styles.scss"],
+            "scripts": [],
+            "webpackConfig": "@nrwl/react/plugins/webpack"
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/my-react-app/src/environments/environment.ts",
+                  "with": "apps/my-react-app/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/web:dev-server",
+          "options": {
+            "buildTarget": "my-react-app:build"
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "my-react-app:build:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/my-react-app/tsconfig.app.json",
+              "apps/my-react-app/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/my-react-app/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/my-react-app/jest.config.js",
+            "tsConfig": "apps/my-react-app/tsconfig.spec.json",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "my-react-app-e2e": {
+      "root": "apps/my-react-app-e2e",
+      "sourceRoot": "apps/my-react-app-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/my-react-app-e2e/cypress.json",
+            "tsConfig": "apps/my-react-app-e2e/tsconfig.e2e.json",
+            "devServerTarget": "my-react-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "my-react-app:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["apps/my-react-app-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/my-react-app-e2e/**/*"]
+          }
+        }
+      }
     }
   },
   "cli": {
@@ -161,6 +266,20 @@
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
+    },
+    "@nrwl/react": {
+      "application": {
+        "style": "scss",
+        "linter": "tslint",
+        "babel": true
+      },
+      "component": {
+        "style": "scss"
+      },
+      "library": {
+        "style": "scss",
+        "linter": "tslint"
+      }
     }
   },
   "defaultProject": "my-angular-app"
