--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
     "@nrwl/angular": "10.0.4",
+    "@nrwl/react": "^10.0.4",
     "rxjs": "~6.5.5",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.10.2",
+    "document-register-element": "1.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@angular/cli": "~10.0.0",
@@ -62,6 +66,16 @@
     "ts-jest": "25.2.1",
     "cypress": "^4.1.0",
     "@nrwl/cypress": "10.0.4",
-    "@nrwl/node": "10.0.4"
+    "@nrwl/node": "10.0.4",
+    "@nrwl/web": "10.0.4",
+    "@nrwl/react": "10.0.4",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@testing-library/react": "10.4.1",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
+    "@babel/preset-react": "7.9.4",
+    "babel-jest": "25.1.0"
   }
 }
