feat(models): add data models library

--- a/nx.json
+++ b/nx.json
@@ -38,6 +38,9 @@
     "my-react-app-e2e": {
       "tags": [],
       "implicitDependencies": ["my-react-app"]
+    },
+    "models": {
+      "tags": []
     }
   }
 }
