--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "@angular/router": "^10.0.0",
     "@nrwl/angular": "10.0.4",
     "@nrwl/react": "^10.0.4",
-    "rxjs": "~6.5.5",
-    "zone.js": "^0.10.2",
     "document-register-element": "1.13.1",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "rxjs": "~6.5.5",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular/cli": "~10.0.0",
